force-app/main/default/objects/Meeting_Transcript__c/Meeting_Transcript__c.object-meta.xml
<CustomObject>
    <label>Meeting Transcript</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Transcript Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Transcripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>