force-app/main/default/objects/Meeting_Transcript__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>