force-app/main/default/objects/Meeting_Transcript__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>Case__r.Contact.FirstName + &quot; &quot; +  Case__r.Contact.LastName</formula>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>