force-app/main/default/objects/Meeting_Transcript__c/fields/Official_Response__c.field-meta.xml
<CustomField>
    <fullName>Official_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Official Response</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>