force-app/main/default/objects/Meeting_Transcript__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transcript</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>